// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQC2VH3jlUM8NpZTDc2_AQibBb1OTIEND24VkhBlz39DeEVl"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDjow1u4_0sFM9rmQSjzT-EkTVT64PS6bPTXLRhYwQBwU7L"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQC2VH3jlUM8NpZTDc2_AQibBb1OTIEND24VkhBlz39DeEVl",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20115n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQC2VH3jlUM8NpZTDc2_AQibBb1OTIEND24VkhBlz39DeEVl",
            "to": "kQDjow1u4_0sFM9rmQSjzT-EkTVT64PS6bPTXLRhYwQBwU7L",
            "type": "internal",
            "value": 9964067000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQC2VH3jlUM8NpZTDc2_AQibBb1OTIEND24VkhBlz39DeEVl",
          "to": "kQDjow1u4_0sFM9rmQSjzT-EkTVT64PS6bPTXLRhYwQBwU7L",
          "type": "internal",
          "value": 9964067000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20123n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDjow1u4_0sFM9rmQSjzT-EkTVT64PS6bPTXLRhYwQBwU7L",
            "to": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
            "type": "internal",
            "value": 9933525000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDjow1u4_0sFM9rmQSjzT-EkTVT64PS6bPTXLRhYwQBwU7L",
          "to": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
          "type": "internal",
          "value": 9933525000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 19876n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
            "to": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
            "type": "internal",
            "value": 9903222000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
          "to": "kQDKjHScONbbyHSGUvKFSHtZJh-Jh6lTJjP3Go1-WAnmgsQo",
          "type": "internal",
          "value": 9903222000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6182n,
      },
    ],
  },
]
`;
